feat: add full navbar functionality across site

--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -49,7 +49,7 @@
                     <a class="nav-link dropdown-toggle p-3 active" href="/service-pages/intrusive-investigations.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item active" href="/service-pages/intrusive-investigations.html">Concrete Coring</a></li>
+                        <li><a class="dropdown-item" href="/service-pages/intrusive-investigations.html">Concrete Coring</a></li>
                         <li><a class="dropdown-item" href="/service-pages/intrusive-investigations.html#dust-sampling">Dust Sampling</a></li>
                         <li><a class="dropdown-item" href="/service-pages/intrusive-investigations.html#concrete-breakouts">Conrete Breakouts</a></li>
                         <li><a class="dropdown-item" href="/service-pages/intrusive-investigations.html#pull-testing">Pull Testing</a></li>
@@ -61,11 +61,11 @@
                             Non-Intrusive Surveys
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Ferroscanning</a></li>
-                            <li><a class="dropdown-item" href="#">Ground Penetrating Radar</a></li>
-                            <li><a class="dropdown-item" href="#">Defect Surveys</a></li>
-                            <li><a class="dropdown-item" href="#">Dimensional Surveys</a></li>
-                            <li><a class="dropdown-item" href="#">Rebound Hammer Surveys</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/non-intrusive-surveys.html">Ferroscanning</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/non-intrusive-surveys.html#ground-penetrating-radar">Ground Penetrating Radar</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/non-intrusive-surveys.html#defect-surveys">Defect Surveys</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/non-intrusive-surveys.html#dimensional-surveys">Dimensional Surveys</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/non-intrusive-surveys.html#rebound-hammer-surveys">Rebound Hammer Surveys</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown mx-1 hover-underline-animation">
@@ -73,17 +73,17 @@
                             Testing
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Carbonation Testing</a></li>
-                            <li><a class="dropdown-item" href="#">Chloride Ion Testing</a></li>
-                            <li><a class="dropdown-item" href="#">HAC Determination</a></li>
-                            <li><a class="dropdown-item" href="#">Compressive Strength Testing</a></li>
-                            <li><a class="dropdown-item" href="#">Sulphide Testing</a></li>
-                            <li><a class="dropdown-item" href="#">Total Alkali Testing</a></li>
-                            <li><a class="dropdown-item" href="#">Petrographic Testing</a></li>
-                            <li><a class="dropdown-item" href="#">Cement Content</a></li>
-                            <li><a class="dropdown-item" href="#">Moisture Content</a></li>
-                            <li><a class="dropdown-item" href="#">Mixed Mortar Analysis</a></li>
-                            <li><a class="dropdown-item" href="#">Tensile Strength</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html">Carbonation Testing</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#chloride-ion-testing">Chloride Ion Testing</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#HAC-determination">HAC Determination</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#compressive-strength-testing">Compressive Strength Testing</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#sulphide-testing">Sulphide Testing</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#total-alkili-testing">Total Alkali Testing</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#petrographic-testing">Petrographic Testing</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#cement-content">Cement Content</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#moisture-content">Moisture Content</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#mixed-mortar-analysis">Mixed Mortar Analysis</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#tensile-strength">Tensile Strength</a></li>
                         </ul>
                     </li>
                     <li class="nav-item mx-1 me-1 me-lg-4 hover-underline-animation">
