fix: correct links in index.html

--- a/contact-us.html
+++ b/contact-us.html
@@ -160,7 +160,7 @@
                         <input 
                             id="query-submit"
                             type="submit" 
-                            value="Send Request" 
+                            value="Submit Query" 
                             class="btn btn-success mt-3 CIK-button"/>
                     </div>
                 </form>
