--- a/index.html
+++ b/index.html
@@ -110,21 +110,21 @@
             <div class="carousel-item">
             <img src="assets/images//banners/site-engineer-construction-site.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
-                <button type="button" class="btn btn-primary mb-3 CIK-button">Intrusive Investigations</button>
+                <a href="/service-pages/intrusive-investigations.html" class="btn btn-primary mb-3 CIK-button">Intrusive Investigations</a>
                 <p>Some representative placeholder content for the second slide.</p>
             </div>
             </div>
             <div class="carousel-item">
             <img src="assets/images/banners/old-mine.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
-                <button type="button" class="btn btn-success mb-3 CIK-button">Non-Intrusive Surveys</button>
+                <a href="/service-pages/non-intrusive-surveys.html" class="btn btn-success mb-3 CIK-button">Non-Intrusive Surveys</a>
                 <p>Some representative placeholder content for the third slide.</p>
             </div>
             </div>
             <div class="carousel-item">
             <img src="assets/images/banners/testing.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
-                <button type="button" class="btn btn-danger mb-3 CIK-button">Testing</button>
+                <a href="/service-pages/testing.html" class="btn btn-danger mb-3 CIK-button">Testing</a>
                 <p>Some representative placeholder content for the fourth slide.</p>
             </div>
             </div>
@@ -177,7 +177,7 @@
                     <div class="card-body">
                         <h3 class="card-title h5">Ferroscanning</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                        <a href="/service-pages/non-intrusive-surveys.html#ferroscanning" class="btn btn-dark">More on Ferroscanning</a>
                     </div>
                 </div>
             </div>
@@ -187,7 +187,7 @@
                     <div class="card-body">
                         <h3 class="card-title h5">Ground Penetrating Radar</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                        <a href="/service-pages/non-intrusive-surveys.html#ground-penetrating-radar" class="btn btn-dark">More on Gound Penetrating Radar</a>
                     </div>
                 </div>
             </div>
@@ -197,7 +197,7 @@
                     <div class="card-body">
                         <h3 class="card-title h5">Defect Surveys</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                        <a href="/service-pages/non-intrusive-surveys.html#defect-surveys" class="btn btn-dark">More on Defect Surveys</a>
                     </div>
                 </div>
             </div>
@@ -207,7 +207,7 @@
                     <div class="card-body">
                         <h3 class="card-title h5">Rebound Hammer Surveys</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                        <a href="/service-pages/non-intrusive-surveys.html#rebound-hammer-surveys" class="btn btn-dark">More on Rebound Hammer Surveys</a>
                     </div>
                 </div>
             </div>
@@ -217,7 +217,7 @@
                     <div class="card-body">
                         <h3 class="card-title h5">Petrographic Testing</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                        <a href="/service-pages/testing.html#petrographic-testing" class="btn btn-dark">More on Petrographic Testing</a>
                     </div>
                 </div>
             </div>
@@ -227,7 +227,7 @@
                     <div class="card-body">
                         <h3 class="card-title h5">Mixed Mortar Analysis</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                        <a href="/service-pages/testing.html#mixed-mortar-analysis" class="btn btn-dark">More on Mixed Mortar Analysis</a>
                     </div>
                 </div>
             </div>
@@ -240,14 +240,14 @@
         <div class="col-4 d-flex align-items-center">
         <span class="text-muted">© 2025 Concrete Insight UK
         <br><br>
-        Some images provided by <a class="inherit-color" href="https://www.freepik.com/">Freepik</a>
+        <a class="inherit-color" target="_blank" href="https://github.com/harrypmdev/sprellerconstruction">Repository and Accreditations</a>
         </span>
         </div>
     
         <ul class="nav col-6 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-muted" href="#" aria-label="Facebook"><i class="fa-brands fa-square-facebook fa-2xl"></i></a></li>
-            <li class="ms-3"><a class="text-muted" href="#" aria-label="Google"><i class="fa-brands fa-google fa-xl"></i></a></li>
-            <li class="ms-3"><a class="text-muted" href="#" aria-label="Instagram"><i class="fa-brands fa-square-instagram fa-2xl"></i></a></li>
+            <li class="ms-3"><a class="text-muted" aria-label="Facebook"><i class="fa-brands fa-square-facebook fa-2xl"></i></a></li>
+            <li class="ms-3"><a class="text-muted" aria-label="Google"><i class="fa-brands fa-google fa-xl"></i></a></li>
+            <li class="ms-3"><a class="text-muted" aria-label="Instagram"><i class="fa-brands fa-square-instagram fa-2xl"></i></a></li>
         </ul>
     </footer>
 
