--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -151,7 +151,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
@@ -214,7 +214,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
@@ -277,7 +277,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
@@ -340,7 +340,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
@@ -403,7 +403,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
