--- a/service-pages/testing.html
+++ b/service-pages/testing.html
@@ -151,7 +151,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
@@ -214,7 +214,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
@@ -277,7 +277,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
@@ -340,7 +340,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
@@ -403,7 +403,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
@@ -466,7 +466,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
@@ -529,7 +529,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
@@ -592,7 +592,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
@@ -655,7 +655,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
@@ -718,7 +718,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
@@ -781,7 +781,7 @@
                     <input 
                         id="query-submit"
                         type="submit" 
-                        value="Send Request" 
+                        value="Submit Query" 
                         class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
