--- a/service-pages/testing.html
+++ b/service-pages/testing.html
@@ -794,14 +794,14 @@
         <div class="col-4 d-flex align-items-center">
         <span class="text-muted">© 2025 Concrete Insight UK
         <br><br>
-        Some images provided by <a class="inherit-color" href="https://www.freepik.com/">Freepik</a>
+        <a class="inherit-color" target="_blank" href="https://github.com/harrypmdev/sprellerconstruction">Repository and Accreditations</a>
         </span>
         </div>
     
         <ul class="nav col-6 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-muted" href="#" aria-label="Facebook"><i class="fa-brands fa-square-facebook fa-2xl"></i></a></li>
-            <li class="ms-3"><a class="text-muted" href="#" aria-label="Google"><i class="fa-brands fa-google fa-xl"></i></a></li>
-            <li class="ms-3"><a class="text-muted" href="#" aria-label="Instagram"><i class="fa-brands fa-square-instagram fa-2xl"></i></a></li>
+            <li class="ms-3"><a class="text-muted" aria-label="Facebook"><i class="fa-brands fa-square-facebook fa-2xl"></i></a></li>
+            <li class="ms-3"><a class="text-muted" aria-label="Google"><i class="fa-brands fa-google fa-xl"></i></a></li>
+            <li class="ms-3"><a class="text-muted" aria-label="Instagram"><i class="fa-brands fa-square-instagram fa-2xl"></i></a></li>
         </ul>
     </footer>
 
