--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -94,13 +94,15 @@
         </div>
     </nav>
 
+    <!-- Main Page -->
+    <div class="container-fluid">
     <!-- Concrete Coring-->
     <section class="row justify-content-center service-background pt-5">
         <div class="col-10 col-lg-9 col-xxl-7 service-box">
             <div class="row align-items-stretch">
             <div class="col-12 col-xl-6 px-0 d-flex flex-column">
                 <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
-                <div class="text-center px-4 px-md-5">
+                <div class="text-center px-4 px-md-5 pt-3">
                     <h2 class="mt-3 pt-5 pt-xl-0">Concrete Coring</h2>
                     <hr>
                     <p class="pb-5 pb-xl-3 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -109,15 +111,12 @@
                 <div class="flex-fill d-flex flex-column white justify-content-center text-center px-4 px-md-5">
                     <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
-                        <div class="col-1"></div>
                         <a href="tel:555-555-5555" class="col-12 btn btn-lg btn-primary CIK-button">
                             <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
                         </a>
-                        <div class="col-1"></div>
                         <a href="#concrete-coring-query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
                             <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
                         </a>
-                        <div class="col-1"></div>
                     </div>
                 </div>
             </div>
@@ -179,15 +178,12 @@
                 <div class="flex-fill d-flex flex-column white justify-content-center text-center px-4 px-md-5">
                     <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
-                        <div class="col-1"></div>
                         <a href="tel:555-555-5555" class="col-12 btn btn-lg btn-primary CIK-button">
                             <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
                         </a>
-                        <div class="col-1"></div>
                         <a href="#dust-sampling-query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
                             <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
                         </a>
-                        <div class="col-1"></div>
                     </div>
                 </div>
             </div>
@@ -235,15 +231,12 @@
                 <div class="flex-fill d-flex flex-column white justify-content-center text-center px-4 px-md-5">
                     <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
-                        <div class="col-1"></div>
                         <a href="tel:555-555-5555" class="col-12 btn btn-lg btn-primary CIK-button">
                             <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
                         </a>
-                        <div class="col-1"></div>
                         <a href="#concrete-breakouts-query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
                             <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
                         </a>
-                        <div class="col-1"></div>
                     </div>
                 </div>
             </div>
@@ -305,15 +298,12 @@
                 <div class="flex-fill d-flex flex-column white justify-content-center text-center px-4 px-md-5">
                     <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
-                        <div class="col-1"></div>
                         <a href="tel:555-555-5555" class="col-12 btn btn-lg btn-primary CIK-button">
                             <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
                         </a>
-                        <div class="col-1"></div>
                         <a href="#pull-testing-query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
                             <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
                         </a>
-                        <div class="col-1"></div>
                     </div>
                 </div>
             </div>
@@ -361,15 +351,12 @@
                 <div class="flex-fill d-flex flex-column white justify-content-center text-center px-4 px-md-5">
                     <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
-                        <div class="col-1"></div>
                         <a href="tel:555-555-5555" class="col-12 btn btn-lg btn-primary CIK-button">
                             <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
                         </a>
-                        <div class="col-1"></div>
                         <a href="#half-cell-query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
                             <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
                         </a>
-                        <div class="col-1"></div>
                     </div>
                 </div>
             </div>
@@ -409,6 +396,7 @@
             </form>
         </div>
     </section>
+    </div>
 
     <!-- Map and Footer -->
     <div id="map"></div>
