--- a/service-pages/testing.html
+++ b/service-pages/testing.html
@@ -94,6 +94,8 @@
         </div>
     </nav>
 
+    <!-- Main Page-->
+    <div class="container-fluid">
     <!-- Carbonation Testing-->
     <section class="row justify-content-center service-background pt-5">
         <div class="col-10 col-lg-9 col-xxl-7 service-box">
@@ -787,6 +789,7 @@
             </form>
         </div>
     </section>
+    </div>
 
     <!-- Map and Footer -->
     <div id="map"></div>
